fix(spring-scripting): instantiate script beans by exact mirror ClassId (Groovy classloader identity)
SimpleInstantiationStrategy.instantiate shim (s_instantiation_strategy_instantiate)
resolved the bean class BY NAME (class_id_by_name + new_object), collapsing two
same-named classes defined by different loaders onto the first/global (app-loader)
definer. GroovyClassLoader.parseClass defines two classes both named "TestBean"
under distinct InnerLoaders; a bean of the second was instantiated as the first, so
Method.invoke(class2.method, bean) threw "object of type TestBean is not an instance
of TestBean" (GroovyClassLoadingTests.classLoading).

Fix: resolve the exact ClassId from the beanClass mirror (class_id_from_mirror) and
allocate via new_object_initialized_with_class_id, falling back to by-name only when
the mirror carries no id. No-op unless a same-name/multi-loader collision exists, so
regression risk is minimal (verified identical to the frozen baseline across the
whole scripting package; only GroovyClassLoadingTests flips FAIL->OK).

Also documents the BshScriptFactoryTests failures (3 methods) as a manifestation of
the pre-existing loader-blind flat-store family in
docs/known-issues/hib-proxyclassreuse-loader-blind-class-resolution.md (two bsh
scripts declaring the same class name MyMessenger collapse; the CRATONVM_LOADER_AWARE_
RESOLUTION gate alone is insufficient because find_loaded_class_for_loader still leaks
the class to a builtin requesting loader).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>